# HDR-Merge-Master

./: .gitignore  TODO.md  build.bat  hdr_brackets.py  pyproject.toml  readme.md
.github/workflows/: release.yml
blender/: HDR_Merge.blend  blender_merge_5.0.py
src/: constants.py
src/gui/: HDRMergeMaster.py  SetupDialog.py
src/hdr_merge_master.egg-info/: SOURCES.txt
src/process/: executor.py  hdr_processor.py
src/utils/: get_blender_version.py
