[project]
name = "hdr-merge-master"
version = "1.3.1"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = ["exifread>=3.5.1", "plyer>=2.1.0"]

[dependency-groups]
dev = ["nuitka>=4.0.7", "ordered-set>=4.1.0", "zstandard>=0.25.0"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
